--- a/templates/login/org_list.html
+++ b/templates/login/org_list.html
@@ -27,6 +27,38 @@
                 </div>
                 {% endif %}
 
+                <table class="table table-striped table-sm">
+                    <thead>
+                    <tr>
+                        <th>{% trans "Name" %}</th>
+                        <th>{% trans "Description" %}</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for org in page_list %}
+                    <tr>
+                        <td>
+                            <a href="{% url 'login:detail-org' pk=org.id %}">{{ org.name }}</a>
+                        </td>
+                        <td>
+                            {{ org.description }}
+                        </td>
+                    </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+
+                {% if page_list.has_other_pages %}
+                <div class="row">
+                    <div class="col">
+                        {% include "pagination/numbers.html" %}
+                    </div>
+                    <div class="col float-right">
+                        {% include "pagination/sizes.html" %}
+                    </div>
+                </div>
+                {% endif %}
+
             {% else %}
 
                 <p>{% trans "No organizations have been created yet." %}</p>
