integrated django-select2 for user selection

--- a/templates/login/org_create_form.html
+++ b/templates/login/org_create_form.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
 {% load i18n %}
-
 {% block content %}
 
 <div class="container">
@@ -17,7 +16,10 @@
         <div class="col">
 
             <h1>{% trans "Organization" %}</h1>
-
+            {{ form.media.css }}
+            <style>
+                input, select {width: 100%}
+            </style>
             <form method="POST" class="post-form">
                 {% csrf_token %}
 
@@ -26,7 +28,6 @@
                 <table>
                     {{ form }}
                 </table>
-
                 <p>
                     {% trans "Edit the organization after creation to provide more details." %}
                 </p>
@@ -35,6 +36,7 @@
                     <button type="submit" class="btn btn-primary">{% trans "Save" %}</button>
                 </p>
             </form>
+            {{ form.media.js }}
         </div>
     </div>
 
