--- a/templates/login/org_form.html
+++ b/templates/login/org_form.html
@@ -26,7 +26,10 @@
   <div class="row">
     <div class="col">
       <h1>{% trans "Organization" %}</h1>
-
+      {{ form.media.css }}
+      <style>
+          input, select {width: 100%}
+      </style>
       <form method="POST" class="post-form">
         {% csrf_token %}
 
@@ -42,6 +45,7 @@
           </button>
         </p>
       </form>
+      {{ form.media.js }}
     </div>
   </div>
 </div>
