--- a/templates/login/org_form.html
+++ b/templates/login/org_form.html
@@ -1,4 +1,7 @@
-{% extends "base.html" %} {% load static %} {% load i18n %} {% block content %}
+{% extends "base.html" %} 
+{% load static %} 
+{% load i18n %} 
+{% block content %}
 
 <div class="container">
   <nav aria-label="breadcrumb">
