--- a/templates/login/org_detail.html
+++ b/templates/login/org_detail.html
@@ -16,6 +16,20 @@
       <!-- ONE VEHICLE, MULTIPLE ORGANIZATIONS EACH VEHICLE, ONE FOREIGN KEY TO ITS
       ORGANIZATIONS ADD A FIELD TO VEHICLES CALLED "organization" THAT STORES THE FOREIGN KEY, ADD A MIGRATION TO UPDATE DATABASE (ALL EXISTING VEHICLES HAVE TO POINT TO AN ORG, BUT THESE VEHICLES WERE CREATED BEFORE ORGS EXISTED BUT THEY HAVE TO POINT AT SOMETHING. BEFORE TESTING, MAKE SURE TO CREATE A NEW AMBULANCE)-->
 
+      <!-- CREATE ORGANIZATION IF RECORDS EXIST, ELSE NOTHING -->
+      <!-- MODIFY BOOTSTRAP TO CREATE ORGANIZATION IF IT DOES NOT EXIST -->
+      <!-- BY THE MIGRATION PHASE, THE BOOTSTRAP PROCESS HAS NOT COMPLETED YET, MEANING THAT THE DATABASE IS NOT THE MOST CURRENT VERSION YET -->
+
+      <!-- RUN MIGRATION ONCE, NULL = TRUE, QUERIES THE DATABASE AND CHECKS FOR VEHICLES (WITH NO ORGANIZATION EXISTING YET) AND ADDS A DEFAULT ORG -->
+      <!-- BEFORE RUNNING THE MIGRATION AGAIN, RECONFIGURE THE BOOTSTRAP FILE TO  -->
+      <!-- RUN MIGRATION AGAIN, NULL = FALSE, NOW THAT THE BOOTSTRAP HAS COMPILED THE MOST RECENT VERSION OF THE DATABASE -->
+
+      <!-- NEED FUNCTIONALITY TO MOVE A VEHICLE FROM ONE ORGANIZATION TO ANOTHER -->
+
+      <!-- DIRECTORY -->
+      <!-- Docker Entrypoint Steps (Order of Executions): EMSTrack-Django/docker-entrypoint -->
+      <!-- BOOTSTRAP: EMSTrack-Django/emstrack/management/commands/bootstrap.py -->
+
       <ol class="breadcrumb">
         <li class="breadcrumb-item">
           <a href="{% url 'login:list-org' %}">{% trans "Organizations" %}</a>
@@ -37,8 +51,8 @@
           <dd>{{ organization.description }}</dd>
           <!-- <dt>{% trans "Associated Medical Organization" %}</dt>
           <dd>{% trans "GROUP" %}</dd> -->
-          <dt>{% trans "Creation Date:" %}</dt>
-          <dd>{% trans "CREATION_DATE" %}</dd>
+          <!-- <dt>{% trans "Creation Date:" %}</dt>
+          <dd>{{ organization.created_on }}</dd> -->
           <dt>{% trans "Number of Registered Vehicles:" %}</dt>
           <dd>{% trans "NUM_REG" %}</dd>
           <!-- <dt>{% trans "Tags:" %}</dt>
@@ -47,29 +61,36 @@
           <dd>
             <table class="table table-striped table-sm">
               <thead>
-              <tr>
+                <tr>
                   <th>{% trans "Username" %}</th>
-              </tr>
+                </tr>
               </thead>
               <tbody>
-              {% for user in organization.users.all %}
-              <tr>
+                {% for user in organization.users.all %}
+                <tr>
                   <td>{{ user.username }}</td>
-              </tr>
-              {% endfor %}
+                </tr>
+                {% endfor %}
               </tbody>
-          </table>
+            </table>
           </dd>
           <dt>{% trans "Vehicle List:" %}</dt>
-          <dd>
-            <ul>
-              <li>{% trans "VEHICLE 1: ID_NUM" %}</li>
-              <li>{% trans "VEHICLE 2: ID_NUM" %}</li>
-              <li>{% trans "VEHICLE 3: ID_NUM" %}</li>
-              <li>{% trans "VEHICLE 4: ID_NUM" %}</li>
-              <li>{% trans "VEHICLE 5: ID_NUM" %}</li>
-            </ul>
-          </dd>
+          <!-- <dd>
+            <table class="table table-striped table-sm">
+              <thead>
+                <tr>
+                  <th>{% trans "Username" %}</th>
+                </tr>
+              </thead>
+              <tbody>
+                {% for vehicle in organization.vehicles.all %}
+                <tr>
+                  <td>{{ vehicle.id }}</td>
+                </tr>
+                {% endfor %}
+              </tbody>
+            </table>
+          </dd> -->
         </dl>
       </main>
     </div>
