--- a/templates/login/org_detail.html
+++ b/templates/login/org_detail.html
@@ -21,14 +21,16 @@
       <!-- BY THE MIGRATION PHASE, THE BOOTSTRAP PROCESS HAS NOT COMPLETED YET, MEANING THAT THE DATABASE IS NOT THE MOST CURRENT VERSION YET -->
 
       <!-- RUN MIGRATION ONCE, NULL = TRUE, QUERIES THE DATABASE AND CHECKS FOR VEHICLES (WITH NO ORGANIZATION EXISTING YET) AND ADDS A DEFAULT ORG -->
-      <!-- BEFORE RUNNING THE MIGRATION AGAIN, RECONFIGURE THE BOOTSTRAP FILE TO  -->
-      <!-- RUN MIGRATION AGAIN, NULL = FALSE, NOW THAT THE BOOTSTRAP HAS COMPILED THE MOST RECENT VERSION OF THE DATABASE -->
+      <!-- BEFORE RUNNING THE MIGRATION AGAIN, RECONFIGURE THE BOOTSTRAP FILE TO ADD A DEFAULT ORG TO REPLACE THE NULL COLUMN VALUE -->
+      <!-- RUN MIGRATION AGAIN, NULL = FALSE, NOW THAT THE BOOTSTRAP HAS COMPILED THE MOST RECENT VERSION OF THE DATABASE AND A POPULATED ORG COLUMN THAT ISNT NULL -->
 
       <!-- NEED FUNCTIONALITY TO MOVE A VEHICLE FROM ONE ORGANIZATION TO ANOTHER -->
 
       <!-- DIRECTORY -->
       <!-- Docker Entrypoint Steps (Order of Executions): EMSTrack-Django/docker-entrypoint -->
       <!-- BOOTSTRAP: EMSTrack-Django/emstrack/management/commands/bootstrap.py -->
+
+      <!-- AT LOGIN, ADD ORGANIZATION TO THE REQUEST -->
 
       <ol class="breadcrumb">
         <li class="breadcrumb-item">
